fading al slide

--- a/views/index.erb
+++ b/views/index.erb
@@ -21,8 +21,8 @@
         <div class="w3-content" style="max-width:1800px;margin-top:46px">
 
             <!-- Automatic Slideshow Images -->
-            <div class="mySlides w3-display-container">
-                <img src="/imagenes/logo.jpg" style="width:100%">
+            <div class="mySlides w3-display-container ">
+                <img src="/imagenes/logo.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band1.jpg" style="width:100%">
+                <img src="/imagenes/galeria/band1.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/danilo.jpg" style="width:100%">
+                <img src="/imagenes/galeria/danilo.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Danilo!</h3>
                     <p>
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/rom.jpg" style="width:100%">
+                <img src="/imagenes/galeria/rom.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Romi!</h3>
                     <p>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/dan.jpg" style="width:100%">
+                <img src="/imagenes/galeria/dan.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Dani!</h3>
                     <p>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/bet.jpg" style="width:100%">
+                <img src="/imagenes/galeria/bet.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Beto!</h3>
                     <p>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/uri.jpg" style="width:100%">
+                <img src="/imagenes/galeria/uri.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Uri!</h3>
                     <p>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/gast.jpg" style="width:100%">
+                <img src="/imagenes/galeria/gast.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Gaston!</h3>
                     <p>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/hern.jpg" style="width:100%">
+                <img src="/imagenes/galeria/hern.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Hernan!</h3>
                     <p>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/vientos.jpg" style="width:100%">
+                <img src="/imagenes/galeria/vientos.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Vientos!</h3>
                     <p>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/pedales.jpg" style="width:100%">
+                <img src="/imagenes/galeria/pedales.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Rock!</h3>
                     <p>
