--- a/views/layout.erb
+++ b/views/layout.erb
@@ -35,7 +35,7 @@
 
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="Musica">
-                    <i class="material-icons">skip_next</i>
+                    <i class="material-icons">photo_library</i>
                     Recitales
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align">
