--- a/views/layout.erb
+++ b/views/layout.erb
@@ -52,7 +52,7 @@
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="Mas">
-                    <i class="material-icons">arrow_drop_down_circle</i>
+                    <i class="material-icons">add_shopping_cart</i>
                     Mas
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
