--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -10,7 +10,7 @@
       <br>
       <br>
       <br>
-        <div class="w3-container w3-orange">
+        <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
             <h1>Loca Bohemia | 20 de Agosto del 2016</h1>
         </div>
 
