--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,7 @@
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="Musica">
-                    <i class="material-icons">play_arrow</i>
+                    <i class="material-icons">radio</i>>
                     Música
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
