parrafo pagina pasados

--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -7,11 +7,12 @@
         <title>Buena Cosecha, Ska Reggae | Recitales pasados</title>
     </head>
     <body>
-      <br>
-      <br>
-      <br>
+        <br>
+        <br>
+        <br>
         <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
-            <h1>Loca Bohemia | 20 de Agosto del 2016</h1>
+            <h3>Loca Bohemia | 20 de Agosto del 2016</h3>
+            <p>Show debut de Buena Cosecha !!</p>
         </div>
 
         <div class="w3-row-padding w3-margin-top">
