--- a/views/letras.erb
+++ b/views/letras.erb
@@ -5,6 +5,195 @@
     <title>Buena Cosecha, Ska Reggae | Letras</title>
   </head>
   <body>
+    <br>
+    <br>
+    <br>
+
+    <div class="w3-card-4">
+      <header class="w3-container w3-blue">
+        <h1>Buena Cosecha</h1>
+</header>
+
+<div class="w3-container">
+
+    <p>
+
+    Y a pesar que voy probando. Que voy improvisando. Con el corazón para adelante avanzo.
+    No me intimida una caída. No es por hacerme el malo, es por que le pongo pila.
+    A mi no me interesa, qué futuro se acerca. Por futuros pasados estoy en esta senda.
+    Crecí en ella y por más que duela, hay que reconocer que yo aprendí de ella.
+    Así es la vida, es corta y rica. Mejor metele onda que quizás no se repita.
+
+    Me voy contaminando, me voy intoxicando. Y cortos o largos voy mis pasos dando.
+    Camino lento y estoy sonriendo. Por que mi destino yo estoy descubriendo.
+    Hoy no oculto mis miedos, no planto en el silencio. Te estoy transmitiendo que esto sí va en serio.
+    Ya sé que cuesta. Intentá y creá. Y a todas mis preguntas encontraré una respuesta.
+
+    Salgo a caminar, para no pensar...
+    Dejarme llevar…
+    Y empiezo a cantar…..
+    La la la.
+
+    Ya se está terminando, esto que estoy rapeando. Y aunque bueno o malo el mensaje es claro.
+    Ponele el pecho, y andá por eso. Eso que te empuja a cumplir tus deseos.
+    Hay voluntad de sobra. NO planto en la memoria. Que no se repita lo que te demora.
+    Sangre en mis venas. Meta entre cejas. Prestá atención ahora que suena Buena Cosecha !!
+
+    Por más….
+    Voy por más….
+    Por más……
+    Voy por más….
+    La la la la. </p>
+  </div>
+
+    </div>
+
+
+    Cuando
+
+    Cuando ya no tengas lugar ni en tu mesa. Cuando tu psiquiatra pierda la cabeza.
+    Cuando tus pisadas ya no dejen huellas, y hasta la piedad te regale su ausencia.
+    Cuando en tu silencio ya no haya misterio. Cuando la mañana no traiga consuelo.
+    Cuando entre las sombras te aceche el desvelo y en la madrugada te mueras de miedo
+
+    Cuando tambalee tu escalera al cielo. Cuando a tus gardenias las mate el invierno.
+    Cuando en tu balcón no haya gatos en celo maullando a la luna y ardiendo en deseos.
+
+    Cuando esa sonrisa no esconda un “Te quiero”. Cuando esas caricias parezcan de hielo.
+    Cuando a tu certezas se las lleve el viento y tus “para siempre” se queden sin tiempo.
+    Cuando ese payaso no te cause gracia. Cuando Maquiavelo se quede sin mañas.
+    Cuando se te oxiden todas las bisagras y a tus timbres los cubran las telarañas.
+
+    Cuando tu pasado se te venga encima. Cuando la nostalgia se cuele en tu risa.
+    Cuando tus pasiones ya no tengan prisa y sea cada vez más fina tu cornisa.
+
+    Quiero ver qué vas a hacer?
+    Cuando esa nube en tu cielo se convierta en aguacero.
+    Quiero ver qué vas a hacer?
+    Cuando te aturda el silencio. Cuando te gane la guerra el invierno…
+
+
+    De la mano
+
+    La madrugada otra vez me encontró, en el jardín del desorden.
+    Cantando siempre la misma canción, tratando de no gritar tu nombre.
+    Cierro los ojos y estalla mi voz. Me ahogo con mis palabras.
+    Bajo la inquieta luz de un farol, juego a la mancha con tu fantasma.
+
+    De la mano de la soledad, tu recuerdo me viene a buscar.
+    Y por los pabellones de sombras y voces me lleva a pasear.
+    Dulce sueño pequeño y fatal. Ansiolítica calma irreal.
+    Y en mi mente, sueño recurrente de salir de acá.
+
+    Pasan los días, todo sigue igual. Son tantos años sin verte.
+    Los que me alejan del joven aquel, que tanto supo quererte.
+    Pero en mi pecho nada va a cambiar, yo te amo a la vieja usanza.
+    Por eso sigo escribiendote igual esas cartas que no sé donde enviar
+
+    De la mano de la soledad, tu recuerdo me viene a buscar.
+    Y por los pabellones de sombras y voces me lleva a pasear.
+    Dulce sueño pequeño y fatal. Ansiolítica calma irreal.
+    Y en mi mente, sueño recurrente de salir de acá.
+    Y en mi mente, sueño recurrente de salir de acá.
+    Y en mi mente, sueño recurrente de verte llegar...
+
+
+    Misteria
+
+    Fué muy fuerte el golpe, había que tomar una decisión.
+    Estaba ciego. Estaba loco. Loco de amor.
+    Y aunque me dijiste que no era lo mejor.
+    Me la jugué hasta las muelas. Hasta perder el control.
+
+    Todas las mañanas tienen olorcito a vos.
+    Es que te extraño. Es que te quiero. Como si el mundo muriera hoy.
+    Y es que día a día yo me aferro a la ilusión.
+    De que aparezcas, y me digas, “Acá está tu corazón”
+
+    Fantaseo con la idea que me vengas a buscar.
+    Pero luego, abro los ojos, y arranco para el bar.
+    Y aunque yo no tome, hoy por vos voy a brindar.
+    A tu salud, mi querida. Siempre te voy a recordar.
+
+    Todas las mañanas tienen olorcito a vos.
+    Es que te extraño. Es que te quiero. Como si el mundo muriera hoy.
+    Y es que día a día yo me aferro a la ilusión.
+    De que aparezcas, y me digas, “Acá está tu corazón”.
+
+    En la barra estoy dormido esperando otro amor.
+    Y como soy un incoherente. Salí de cazador.
+    Una mujer se acerca, me ilumina el corazón.
+    Era la gorra. Y por borracho. A la cárcel me llevó.
+
+    Todas las mañanas tienen olorcito a vos.
+    Es que te extraño. Es que te quiero. Como si el mundo muriera hoy.
+    Y es que día a día yo me aferro a la ilusión.
+    De que aparezcas, y me digas, “Acá está tu corazón”.
+
+    Por qué?.....Por qué, me dejaste?
+
+
+    Tierra
+
+    Tierra, que nos diste lo suficiente. Querida tierra.
+    En un pasado te fuimos fieles querida Tierra. Juzganos hoy!
+    Son menos plantas en ésta esfera, por un progreso que nunca espera.
+    Si el hombre voraz no es capaz de frenar la masacre de lo natural.
+    Disculpanos Tierra !
+
+    Los animales que se despiden marchan dolidos a la extinción.
+    No hay glaciaciones que marquen la era, es el humano que imprime dolor.
+    Por minerales que valoran brillo, está condenado a su perdición.
+
+    Me gustaría ir a verles las caras a los que matan al aire por plata.
+    Cuando sus hijos usando barbijos pregunten “¿Por qué hicieron esto, papá?”
+
+    Tierra. Que maldices a nuestra raza perdón mi Tierra !!!
+    Yo busco el cambio profundo en todos y hacer conciencia.
+    Que mientras más te cuidemos todos, hay vida eterna.
+    A cuidar la naturaleza, paren la guerra.
+
+    El tiempo pasa y la mecha es corta cuando interviene la corrupción.
+    Tenemos que darle un poco de bola a lo que pasa en el interior.
+    Por extraer oro, plata y cobre se están robando el futuro de hoy !
+
+    Me gustaría poder contar con un poco de agua pura mañana.
+    Y mantener el Planeta vivo, creo que es más que justa la causa.
+
+    Tierra.
+    Tierra.
+    Tierra.
+
+
+    Yo sabía
+
+    Hey ! Que línda estabas vos ayer !!!
+    Algo cerca y lejos a la vez.
+    Tengo dudas de lo que pasa.
+    Hay mucha chispa y se que hay algo más, acá.
+
+    Siento en el aire tus ojos.
+    Yo sé que no me equivoco esta vez.
+    Son esos gestos, tu sonrisa y esa luz.
+    Mostrame un poco de lo que en la mente tenes.
+
+    Ponés distancia y sé que es por lo insegura que hoy estas.
+    Voy a buscarte en lo cercano, y si estás lejos mucho más.
+    No es molestarte, es una duda. Contestame si es verdad…
+    Si, vos también me mirás? Es verdad que me mirás?
+
+    Sale el sol, con tu mirada agacha.
+    Me parte el alma, que la injusticia ganará.
+    Sospecho igual que un corazón te domina la cama.
+    Mantengo la esperanza de ser yo el de la osadía.
+
+    No se acercarme sin pensar que vos no vas a dar lugar.
+    Sé, todo es loco esto que pasa pero es la realidad.
+    Es solo nuestro este secreto. Y entre dos se va a quedar.
+
+    Hoy dame la oportunidad…
+    De estar con vos un rato más…
+
 
   </body>
 </html>
