--- a/views/letras.erb
+++ b/views/letras.erb
@@ -16,7 +16,7 @@
 
 <div class="w3-container">
 
-    <p>
+    <pre>
 
     Y a pesar que voy probando. Que voy improvisando. Con el corazón para adelante avanzo.
     No me intimida una caída. No es por hacerme el malo, es por que le pongo pila.
@@ -43,7 +43,7 @@
     Voy por más….
     Por más……
     Voy por más….
-    La la la la. </p>
+    La la la la. </pre>
   </div>
 
     </div>
