--- a/views/letras.erb
+++ b/views/letras.erb
@@ -48,9 +48,14 @@
 
     </div>
 
+    <div class="w3-card-4">
+      <header class="w3-container w3-blue">
+        <h1>Cuando</h1>
+</header>
 
-    Cuando
+<div class="w3-container">
 
+    <pre>
     Cuando ya no tengas lugar ni en tu mesa. Cuando tu psiquiatra pierda la cabeza.
     Cuando tus pisadas ya no dejen huellas, y hasta la piedad te regale su ausencia.
     Cuando en tu silencio ya no haya misterio. Cuando la mañana no traiga consuelo.
@@ -72,8 +77,20 @@
     Quiero ver qué vas a hacer?
     Cuando te aturda el silencio. Cuando te gane la guerra el invierno…
 
+  </pre>
+</div>
 
-    De la mano
+  </div>
+
+  <div class="w3-card-4">
+    <header class="w3-container w3-blue">
+      <h1>De la mano</h1>
+  </header>
+
+  <div class="w3-container">
+
+  <pre>
+
 
     La madrugada otra vez me encontró, en el jardín del desorden.
     Cantando siempre la misma canción, tratando de no gritar tu nombre.
@@ -96,9 +113,21 @@
     Y en mi mente, sueño recurrente de salir de acá.
     Y en mi mente, sueño recurrente de salir de acá.
     Y en mi mente, sueño recurrente de verte llegar...
+  </pre>
+  </div>
+
+  </div>
+
+  <div class="w3-card-4">
+    <header class="w3-container w3-blue">
+      <h1>Misteria</h1>
+  </header>
+
+  <div class="w3-container">
+
+  <pre>
 
 
-    Misteria
 
     Fué muy fuerte el golpe, había que tomar una decisión.
     Estaba ciego. Estaba loco. Loco de amor.
@@ -132,8 +161,21 @@
 
     Por qué?.....Por qué, me dejaste?
 
+  </pre>
+  </div>
 
-    Tierra
+  </div>
+
+  <div class="w3-card-4">
+    <header class="w3-container w3-blue">
+      <h1>Tierra</h1>
+  </header>
+
+  <div class="w3-container">
+
+  <pre>
+
+
 
     Tierra, que nos diste lo suficiente. Querida tierra.
     En un pasado te fuimos fieles querida Tierra. Juzganos hoy!
@@ -164,8 +206,21 @@
     Tierra.
     Tierra.
 
+  </pre>
+  </div>
 
-    Yo sabía
+  </div>
+
+
+  <div class="w3-card-4">
+    <header class="w3-container w3-blue">
+      <h1>Yo sabía</h1>
+  </header>
+
+  <div class="w3-container">
+
+  <pre>
+
 
     Hey ! Que línda estabas vos ayer !!!
     Algo cerca y lejos a la vez.
@@ -193,7 +248,10 @@
 
     Hoy dame la oportunidad…
     De estar con vos un rato más…
+  </pre>
+  </div>
 
+  </div>
 
   </body>
 </html>
