--- a/views/letras.erb
+++ b/views/letras.erb
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Buena Cosecha, Ska Reggae | Letras</title>
-  </head>
-  <body>
-    <br>
-    <br>
-    <br>
+    <head>
+        <meta charset="utf-8">
+        <title>Buena Cosecha, Ska Reggae | Letras</title>
+    </head>
+    <body>
+        <br>
+        <br>
+        <br>
 
-    <div class="w3-card-4">
-      <header class="w3-container w3-blue">
-        <h1>Buena Cosecha</h1>
-</header>
-
-<div class="w3-container">
-
-    <pre>
-
-    Y a pesar que voy probando. Que voy improvisando. Con el corazón para adelante avanzo.
+        <div class="w3-card-4">
+            <header class="w3-container w3-blue">
+                <h1>Buena Cosecha</h1>
+            </header>
+            <div class="w3-container">
+                <pre> Y a pesar que voy probando. Que voy improvisando. Con el corazón para adelante avanzo.
     No me intimida una caída. No es por hacerme el malo, es por que le pongo pila.
     A mi no me interesa, qué futuro se acerca. Por futuros pasados estoy en esta senda.
     Crecí en ella y por más que duela, hay que reconocer que yo aprendí de ella.
@@ -44,19 +40,15 @@
     Por más……
     Voy por más….
     La la la la. </pre>
-  </div>
-
-    </div>
-
-    <div class="w3-card-4">
-      <header class="w3-container w3-blue">
-        <h1>Cuando</h1>
-</header>
-
-<div class="w3-container">
-
-    <pre>
-    Cuando ya no tengas lugar ni en tu mesa. Cuando tu psiquiatra pierda la cabeza.
+            </div>
+        </div>
+        <br>
+        <div class="w3-card-4">
+            <header class="w3-container w3-blue">
+                <h1>Cuando</h1>
+            </header>
+            <div class="w3-container">
+                <pre>Cuando ya no tengas lugar ni en tu mesa. Cuando tu psiquiatra pierda la cabeza.
     Cuando tus pisadas ya no dejen huellas, y hasta la piedad te regale su ausencia.
     Cuando en tu silencio ya no haya misterio. Cuando la mañana no traiga consuelo.
     Cuando entre las sombras te aceche el desvelo y en la madrugada te mueras de miedo
@@ -75,24 +67,16 @@
     Quiero ver qué vas a hacer?
     Cuando esa nube en tu cielo se convierta en aguacero.
     Quiero ver qué vas a hacer?
-    Cuando te aturda el silencio. Cuando te gane la guerra el invierno…
-
-  </pre>
-</div>
-
-  </div>
-
-  <div class="w3-card-4">
-    <header class="w3-container w3-blue">
-      <h1>De la mano</h1>
-  </header>
-
-  <div class="w3-container">
-
-  <pre>
-
-
-    La madrugada otra vez me encontró, en el jardín del desorden.
+    Cuando te aturda el silencio. Cuando te gane la guerra el invierno…  </pre>
+            </div>
+        </div>
+        <br>
+        <div class="w3-card-4">
+            <header class="w3-container w3-blue">
+                <h1>De la mano</h1>
+            </header>
+            <div class="w3-container">
+                <pre>La madrugada otra vez me encontró, en el jardín del desorden.
     Cantando siempre la misma canción, tratando de no gritar tu nombre.
     Cierro los ojos y estalla mi voz. Me ahogo con mis palabras.
     Bajo la inquieta luz de un farol, juego a la mancha con tu fantasma.
@@ -112,24 +96,16 @@
     Dulce sueño pequeño y fatal. Ansiolítica calma irreal.
     Y en mi mente, sueño recurrente de salir de acá.
     Y en mi mente, sueño recurrente de salir de acá.
-    Y en mi mente, sueño recurrente de verte llegar...
-  </pre>
-  </div>
-
-  </div>
-
-  <div class="w3-card-4">
-    <header class="w3-container w3-blue">
-      <h1>Misteria</h1>
-  </header>
-
-  <div class="w3-container">
-
-  <pre>
-
-
-
-    Fué muy fuerte el golpe, había que tomar una decisión.
+    Y en mi mente, sueño recurrente de verte llegar...  </pre>
+            </div>
+        </div>
+        <br>
+        <div class="w3-card-4">
+            <header class="w3-container w3-blue">
+                <h1>Misteria</h1>
+            </header>
+            <div class="w3-container">
+                <pre>Fué muy fuerte el golpe, había que tomar una decisión.
     Estaba ciego. Estaba loco. Loco de amor.
     Y aunque me dijiste que no era lo mejor.
     Me la jugué hasta las muelas. Hasta perder el control.
@@ -159,25 +135,17 @@
     Y es que día a día yo me aferro a la ilusión.
     De que aparezcas, y me digas, “Acá está tu corazón”.
 
-    Por qué?.....Por qué, me dejaste?
+    Por qué?.....Por qué, me dejaste? </pre>
+            </div>
+        </div>
+        <br>
 
-  </pre>
-  </div>
-
-  </div>
-
-  <div class="w3-card-4">
-    <header class="w3-container w3-blue">
-      <h1>Tierra</h1>
-  </header>
-
-  <div class="w3-container">
-
-  <pre>
-
-
-
-    Tierra, que nos diste lo suficiente. Querida tierra.
+        <div class="w3-card-4">
+            <header class="w3-container w3-blue">
+                <h1>Tierra</h1>
+            </header>
+            <div class="w3-container">
+                <pre>Tierra, que nos diste lo suficiente. Querida tierra.
     En un pasado te fuimos fieles querida Tierra. Juzganos hoy!
     Son menos plantas en ésta esfera, por un progreso que nunca espera.
     Si el hombre voraz no es capaz de frenar la masacre de lo natural.
@@ -204,25 +172,17 @@
 
     Tierra.
     Tierra.
-    Tierra.
+    Tierra. </pre>
+            </div>
+        </div>
+        <br>
 
-  </pre>
-  </div>
-
-  </div>
-
-
-  <div class="w3-card-4">
-    <header class="w3-container w3-blue">
-      <h1>Yo sabía</h1>
-  </header>
-
-  <div class="w3-container">
-
-  <pre>
-
-
-    Hey ! Que línda estabas vos ayer !!!
+        <div class="w3-card-4">
+            <header class="w3-container w3-blue">
+                <h1>Yo sabía</h1>
+            </header>
+            <div class="w3-container">
+                <pre>Hey ! Que línda estabas vos ayer !!!
     Algo cerca y lejos a la vez.
     Tengo dudas de lo que pasa.
     Hay mucha chispa y se que hay algo más, acá.
@@ -247,11 +207,9 @@
     Es solo nuestro este secreto. Y entre dos se va a quedar.
 
     Hoy dame la oportunidad…
-    De estar con vos un rato más…
-  </pre>
-  </div>
-
-  </div>
-
-  </body>
+    De estar con vos un rato más…</pre>
+            </div>
+        </div>
+        <br>
+    </body>
 </html>
