--- a/views/letras.erb
+++ b/views/letras.erb
@@ -11,10 +11,11 @@
 
         <div class="w3-card-4">
             <header class="w3-container w3-blue">
-                <h1>Buena Cosecha</h1>
+                <h3>Buena Cosecha</h3>
             </header>
             <div class="w3-container">
-                <pre> Y a pesar que voy probando. Que voy improvisando. Con el corazón para adelante avanzo.
+                <pre>
+    Y a pesar que voy probando. Que voy improvisando. Con el corazón para adelante avanzo.
     No me intimida una caída. No es por hacerme el malo, es por que le pongo pila.
     A mi no me interesa, qué futuro se acerca. Por futuros pasados estoy en esta senda.
     Crecí en ella y por más que duela, hay que reconocer que yo aprendí de ella.
@@ -45,10 +46,11 @@
         <br>
         <div class="w3-card-4">
             <header class="w3-container w3-blue">
-                <h1>Cuando</h1>
+                <h3>Cuando</h3>
             </header>
             <div class="w3-container">
-                <pre>Cuando ya no tengas lugar ni en tu mesa. Cuando tu psiquiatra pierda la cabeza.
+                <pre>
+    Cuando ya no tengas lugar ni en tu mesa. Cuando tu psiquiatra pierda la cabeza.
     Cuando tus pisadas ya no dejen huellas, y hasta la piedad te regale su ausencia.
     Cuando en tu silencio ya no haya misterio. Cuando la mañana no traiga consuelo.
     Cuando entre las sombras te aceche el desvelo y en la madrugada te mueras de miedo
@@ -73,10 +75,11 @@
         <br>
         <div class="w3-card-4">
             <header class="w3-container w3-blue">
-                <h1>De la mano</h1>
+                <h3>De la mano</h3>
             </header>
             <div class="w3-container">
-                <pre>La madrugada otra vez me encontró, en el jardín del desorden.
+                <pre>
+    La madrugada otra vez me encontró, en el jardín del desorden.
     Cantando siempre la misma canción, tratando de no gritar tu nombre.
     Cierro los ojos y estalla mi voz. Me ahogo con mis palabras.
     Bajo la inquieta luz de un farol, juego a la mancha con tu fantasma.
@@ -102,10 +105,11 @@
         <br>
         <div class="w3-card-4">
             <header class="w3-container w3-blue">
-                <h1>Misteria</h1>
+                <h3>Misteria</h3>
             </header>
             <div class="w3-container">
-                <pre>Fué muy fuerte el golpe, había que tomar una decisión.
+                <pre>
+    Fué muy fuerte el golpe, había que tomar una decisión.
     Estaba ciego. Estaba loco. Loco de amor.
     Y aunque me dijiste que no era lo mejor.
     Me la jugué hasta las muelas. Hasta perder el control.
@@ -142,10 +146,11 @@
 
         <div class="w3-card-4">
             <header class="w3-container w3-blue">
-                <h1>Tierra</h1>
+                <h3>Tierra</h3>
             </header>
             <div class="w3-container">
-                <pre>Tierra, que nos diste lo suficiente. Querida tierra.
+                <pre>
+    Tierra, que nos diste lo suficiente. Querida tierra.
     En un pasado te fuimos fieles querida Tierra. Juzganos hoy!
     Son menos plantas en ésta esfera, por un progreso que nunca espera.
     Si el hombre voraz no es capaz de frenar la masacre de lo natural.
@@ -179,10 +184,11 @@
 
         <div class="w3-card-4">
             <header class="w3-container w3-blue">
-                <h1>Yo sabía</h1>
+                <h3>Yo sabía</h3>
             </header>
             <div class="w3-container">
-                <pre>Hey ! Que línda estabas vos ayer !!!
+                <pre>
+    Hey ! Que línda estabas vos ayer !!!
     Algo cerca y lejos a la vez.
     Tengo dudas de lo que pasa.
     Hay mucha chispa y se que hay algo más, acá.
