--- a/views/letras.erb
+++ b/views/letras.erb
@@ -9,7 +9,7 @@
         <br>
         <br>
 
-        <div class="w3-card-4">
+        <div class="w3-card-4" style="width:50%;">
             <header class="w3-container w3-blue">
                 <h3>Buena Cosecha</h3>
             </header>
@@ -44,7 +44,7 @@
             </div>
         </div>
         <br>
-        <div class="w3-card-4">
+        <div class="w3-card-4" style="width:50%;">
             <header class="w3-container w3-blue">
                 <h3>Cuando</h3>
             </header>
@@ -73,7 +73,7 @@
             </div>
         </div>
         <br>
-        <div class="w3-card-4">
+        <div class="w3-card-4" style="width:50%;">
             <header class="w3-container w3-blue">
                 <h3>De la mano</h3>
             </header>
@@ -103,7 +103,7 @@
             </div>
         </div>
         <br>
-        <div class="w3-card-4">
+        <div class="w3-card-4" style="width:50%;">
             <header class="w3-container w3-blue">
                 <h3>Misteria</h3>
             </header>
@@ -144,7 +144,7 @@
         </div>
         <br>
 
-        <div class="w3-card-4">
+        <div class="w3-card-4" style="width:50%;">
             <header class="w3-container w3-blue">
                 <h3>Tierra</h3>
             </header>
@@ -182,7 +182,7 @@
         </div>
         <br>
 
-        <div class="w3-card-4">
+        <div class="w3-card-4" style="width:50%;">
             <header class="w3-container w3-blue">
                 <h3>Yo sabía</h3>
             </header>
