--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Buena Cosecha, Ska Reggae | Comprar entradas</title>
-  </head>
-  <body>
+    <head>
+        <meta charset="utf-8">
+        <title>Buena Cosecha, Ska Reggae | Comprar entradas</title>
+    </head>
+    <body>
 
-  </body>
+        <!-- Ticket Modal -->
+        <div id="ticketModal" class="w3-modal">
+            <div class="w3-modal-content w3-animate-top w3-card-8">
+                <header class="w3-container w3-teal w3-center w3-padding-32">
+                    <span onclick="document.getElementById('ticketModal').style.display='none'" class="w3-closebtn w3-padding-xlarge w3-xxlarge w3-display-topright">×</span>
+                    <h2 class="w3-wide">
+                        <i class="fa fa-suitcase w3-margin-right"></i>Entradas</h2>
+                </header>
+                <div class="w3-container">
+                    <p>
+                        <label>
+                            <i class="fa fa-shopping-cart"></i>
+                            Entradas, $50 por persona</label>
+                    </p>
+                    <input class="w3-input w3-border" type="text" placeholder="Cuantas?">
+                    <p>
+                        <label>
+                            <i class="fa fa-user"></i>
+                            Enviar a</label>
+                    </p>
+                    <input class="w3-input w3-border" type="text" placeholder="Ingresa tu email">
+                    <button class="w3-btn-block w3-teal w3-padding-12 w3-section w3-right">Pagar
+                        <i class="fa fa-check"></i>
+                    </button>
+                    <button class="w3-btn w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Cerrar
+                        <i class="fa fa-remove"></i>
+                    </button>
+                    <p class="w3-right">Necesitas
+                        <a href="#" class="w3-text-blue">ayuda?</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+            // When the user clicks anywhere outside of the modal, close it
+            var modal = document.getElementById('ticketModal');
+            window.onclick = function (event) {
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            }
+        </script>
+
+    </body>
 </html>
