--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -5,7 +5,9 @@
         <title>Buena Cosecha, Ska Reggae | Comprar entradas</title>
     </head>
     <body>
-
+        <br>
+        <br>
+        <br>
         <!-- Ticket Modal -->
         <div id="ticketModal" class="w3-modal">
             <div class="w3-modal-content w3-animate-top w3-card-8">
@@ -39,15 +41,7 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript">
-            // When the user clicks anywhere outside of the modal, close it
-            var modal = document.getElementById('ticketModal');
-            window.onclick = function (event) {
-                if (event.target == modal) {
-                    modal.style.display = "none";
-                }
-            }
-        </script>
+        <script src="/js/entradas.js"></script>
 
     </body>
 </html>
