estilos en entradas

--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+      <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+      <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+
         <meta charset="utf-8">
         <title>Buena Cosecha, Ska Reggae | Comprar entradas</title>
     </head>
