--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -47,5 +47,8 @@
                 </div>
             </div>
         </div>
+        <script src="/js/entradas.js"></script>
+
     </body>
+
 </html>
