--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -6,7 +6,14 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <script src="/js/entradas.js"></script>
-
+        <style>
+            body {
+                font-family: "Lato", sans-serif;
+            }
+            .mySlides {
+                display: none;
+            }
+        </style>
         <meta charset="utf-8">
         <title>Buena Cosecha, Ska Reggae | Comprar entradas</title>
     </head>
