--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -10,69 +10,96 @@
         <br>
         <br>
         <!-- The Tour Section -->
-  <div class="w3-black">
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">TOUR DATES</h2>
-      <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
+        <div class="w3-black">
+            <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+                <h2 class="w3-wide w3-center">RECITALES</h2>
+                <p class="w3-opacity w3-center">
+                    <i>Podes comprar y reservar tus entradas online</i>
+                </p><br>
 
-      <ul class="w3-ul w3-border w3-white w3-text-grey">
-        <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">October <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">November <span class="w3-badge w3-right w3-margin-right">3</span></li>
-      </ul>
+                <ul class="w3-ul w3-border w3-white w3-text-grey">
+                    <li class="w3-padding">Agosto
+                        <span class="w3-tag w3-red w3-margin-left">Finalizado</span>
+                    </li>
+                    <li class="w3-padding">Septiembre
+                        <span class="w3-tag w3-red w3-margin-left">Sin shows</span>
+                    </li>
+                    <li class="w3-padding">Octubre
+                        <span class="w3-badge w3-right w3-margin-right">Aún no en venta</span>
+                    </li>
+                </ul>
 
-      <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-        <div class="w3-third w3-margin-bottom">
-          <img src="img_newyork.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>New York</b></p>
-            <p class="w3-opacity">Fri 27 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
-          </div>
+                <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+                    <div class="w3-third w3-margin-bottom">
+                        <img src="/imagenes/galeria/bet.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+                        <div class="w3-container w3-white">
+                            <p>
+                                <b>Loca Bohemia</b>
+                            </p>
+                            <p class="w3-opacity">Sabado 20 de Agosto del 2016</p>
+                            <p>Show debut de Buena Cosecha.</p>
+                            <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Comprar entradas</button>
+                        </div>
+                    </div>
+                    <div class="w3-third w3-margin-bottom">
+                        <img src="/imagenes/galeria/dan.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+                        <div class="w3-container w3-white">
+                            <p>
+                                <b>Longchamps</b>
+                            </p>
+                            <p class="w3-opacity">Sabado de octubre del 2016</p>
+                            <p>Primera fecha fuera de capital!</p>
+                            <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Comprar entradas</button>
+                        </div>
+                    </div>
+                    <div class="w3-third w3-margin-bottom">
+                        <img src="/imagenes/galeria/hern.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+                        <div class="w3-container w3-white">
+                            <p>
+                                <b>La Fábrica, Lanús</b>
+                            </p>
+                            <p class="w3-opacity">Viernes de noviembre del 2016</p>
+                            <p>Siguiendo la gira por zona sur!</p>
+                            <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Comprar entradas</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="w3-third w3-margin-bottom">
-          <img src="img_paris.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>Paris</b></p>
-            <p class="w3-opacity">Sat 28 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
-          </div>
-        </div>
-        <div class="w3-third w3-margin-bottom">
-          <img src="img_sanfran.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>San Francisco</b></p>
-            <p class="w3-opacity">Sun 29 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <!-- Ticket Modal -->
-  <div id="ticketModal" class="w3-modal">
-    <div class="w3-modal-content w3-animate-top w3-card-8">
-      <header class="w3-container w3-teal w3-center w3-padding-32">
-        <span onclick="document.getElementById('ticketModal').style.display='none'"
-       class="w3-closebtn w3-padding-xlarge w3-xxlarge w3-display-topright">×</span>
-        <h2 class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Tickets</h2>
-      </header>
-      <div class="w3-container">
-        <p><label><i class="fa fa-shopping-cart"></i> Tickets, $15 per person</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="How many?">
-        <p><label><i class="fa fa-user"></i> Send To</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="Enter email">
-        <button class="w3-btn-block w3-teal w3-padding-12 w3-section w3-right">PAY <i class="fa fa-check"></i></button>
-        <button class="w3-btn w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
-        <p class="w3-right">Need <a href="#" class="w3-text-blue">help?</a></p>
-      </div>
-    </div>
-  </div>
-        <script src="/js/entradas.js"></script>
+        <!-- Ticket Modal -->
+        <div id="ticketModal" class="w3-modal">
+            <div class="w3-modal-content w3-animate-top w3-card-8">
+                <header class="w3-container w3-teal w3-center w3-padding-32">
+                    <span onclick="document.getElementById('ticketModal').style.display='none'" class="w3-closebtn w3-padding-xlarge w3-xxlarge w3-display-topright">×</span>
+                    <h2 class="w3-wide">
+                        <i class="fa fa-suitcase w3-margin-right"></i>Entradas</h2>
+                </header>
+                <div class="w3-container">
+                    <p>
+                        <label>
+                            <i class="fa fa-shopping-cart"></i>
+                            Entradas, $50 por persona</label>
+                    </p>
+                    <input class="w3-input w3-border" type="text" placeholder="Cuantas?">
+                    <p>
+                        <label>
+                            <i class="fa fa-user"></i>
+                            Enviar a</label>
+                    </p>
+                    <input class="w3-input w3-border" type="text" placeholder="Tu email">
+                    <button class="w3-btn-block w3-teal w3-padding-12 w3-section w3-right">Pagar
+                        <i class="fa fa-check"></i>
+                    </button>
+                    <button class="w3-btn w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Cerrar
+                        <i class="fa fa-remove"></i>
+                    </button>
+                    <p class="w3-right">Necesitas
+                        <a href="#" class="w3-text-blue">ayuda?</a>
+                    </p>
+                </div>
+            </div>
+        </div>
 
     </body>
 
