--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -32,7 +32,7 @@
                         <img src="/imagenes/galeria/bet.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
                         <div class="w3-container w3-white">
                             <p>
-                                <b>Loca Bohemia</b>
+                                <b>Loca Bohemia, CABA</b>
                             </p>
                             <p class="w3-opacity">Sabado 20 de Agosto del 2016</p>
                             <p>Show debut de Buena Cosecha.</p>
