--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="/imagenes/favicon.ico" rel="shortcut icon">
+        <script src="/js/analytics.js"></script>
+
     </head>
 
     <!-- Navbar -->
