verificación webmaster tools

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <title>Buena Cosecha | Ska Reggae </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <title>Buena Cosecha | Ska Reggae
+    </title>
+    <head>
+        <meta name="google-site-verification" content="tZ29lnY9K77zk3P76FMVACpqZm1Aeiha3lukoAFjE9M"/>
 
-    <style>
-        body {
-            font-family: "Lato", sans-serif;
-        }
-        .mySlides {
-            display: none;
-        }
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
-    </style>
+        <style>
+            body {
+                font-family: "Lato", sans-serif;
+            }
+            .mySlides {
+                display: none;
+            }
+
+        </style>
+    </head>
+
     <body>
 
-                <!-- Page content -->
+        <!-- Page content -->
         <div class="w3-content" style="max-width:1800px;margin-top:46px">
 
             <!-- Automatic Slideshow Images -->
