--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,7 @@
 
             <!-- Automatic Slideshow Images -->
             <div class="mySlides w3-display-container ">
-                <img src="/imagenes/band.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/bandd.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -108,7 +108,7 @@
                     </p>
                 </div>
             </div>
-            
+
 
             <!-- The Band Section -->
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
