--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,16 @@
 
             <!-- Automatic Slideshow Images -->
             <div class="mySlides w3-display-container ">
-                <img src="/imagenes/bandd.jpg" class="w3-animate-top" style="width:100%">
+                <img src="/imagenes/logoancho.jpg" class="w3-animate-bottom" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Buena Cosecha!</h3>
+                    <p>
+                        <b>Es lo que somos</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container ">
+                <img src="/imagenes/galeria/bandd.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
