--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -29,7 +29,7 @@
 
                 <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
                     <div class="w3-third w3-margin-bottom">
-                        <img src="/imagenes/galeria/bet.jpg" alt="loca" style="width:100%" class="w3-hover-opacity">
+                        <img src="/imagenes/galeria/fechas/locabohemia20-8.jpg" alt="loca" style="width:100%" class="w3-hover-opacity">
                         <div class="w3-container w3-white">
                             <p>
                                 <b>Loca Bohemia, CABA</b>
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     <div class="w3-third w3-margin-bottom">
-                        <img src="/imagenes/galeria/dan.jpg" alt="longchamps" style="width:100%" class="w3-hover-opacity">
+                        <img src="/imagenes/galeria/fechas/longchamps.jpg" alt="longchamps" style="width:100%" class="w3-hover-opacity">
                         <div class="w3-container w3-white">
                             <p>
                                 <b>Longchamps</b>
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="w3-third w3-margin-bottom">
-                        <img src="/imagenes/galeria/hern.jpg" alt="lanus" style="width:100%" class="w3-hover-opacity">
+                        <img src="/imagenes/galeria/fechas/lanuslafabrica.jpg" alt="lanus" style="width:100%" class="w3-hover-opacity">
                         <div class="w3-container w3-white">
                             <p>
                                 <b>La Fábrica, Lanús</b>
