imagenes fechas pasadas

--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -27,7 +27,7 @@
             </div>
             <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/bet.jpg" class="w3-border w3-padding" style="width:100%">
+                    <img src="/imagenes/galeria/bandd.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>El Beto!</h5>
                     </div>
@@ -35,7 +35,7 @@
             </div>
             <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/dan.jpg" class="w3-border w3-padding" style="width:100%">
+                    <img src="/imagenes/galeria/band1.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>Dani!</h5>
                     </div>
@@ -43,7 +43,7 @@
             </div>
             <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/rom.jpg" class="w3-border w3-padding" style="width:100%">
+                    <img src="/imagenes/galeria/band2.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>Romi!</h5>
                     </div>
@@ -55,7 +55,7 @@
 
             <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/danilo.jpg" class="w3-border w3-padding" style="width:100%">
+                    <img src="/imagenes/galeria/band3.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>Danilo!</h5>
                     </div>
@@ -63,7 +63,7 @@
             </div>
             <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/gast.jpg" class="w3-border w3-padding" style="width:100%">
+                    <img src="/imagenes/galeria/band4.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>El pela!</h5>
                     </div>
@@ -71,7 +71,7 @@
             </div>
             <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/hern.jpg" class="w3-border w3-padding" style="width:100%">
+                    <img src="/imagenes/galeria/band5.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>Herny!</h5>
                     </div>
@@ -80,7 +80,7 @@
 
             <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/uri.jpg" class="w3-border w3-padding" style="width:100%">
+                    <img src="/imagenes/galeria/band6.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>Uri!</h5>
                     </div>
