--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -35,9 +35,9 @@
             </div>
             <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/bandd.jpg" class="w3-border w3-padding" style="width:100%">
+                    <img src="/imagenes/galeria/band7.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
-                        <h5>La banda loca completa!</h5>
+                        <h5>El vasquito!</h5>
                     </div>
                 </div>
             </div>
