modificación de menus y agregado pagínas contenedoras

--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -45,7 +45,7 @@
                             <p>
                                 <b>Longchamps</b>
                             </p>
-                            <p class="w3-opacity">Sabado de octubre del 2016</p>
+                            <p class="w3-opacity">Viernres 21 de octubre del 2016</p>
                             <p>Primera fecha fuera de capital!</p>
                             <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Comprar entradas</button>
                         </div>
