--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,7 +24,7 @@
 
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
-                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="Musica">
+                <a href="multimedia" class="w3-hover-none w3-padding-large" title="Musica">
                     <i class="material-icons">radio</i>
                     Música
                 </a>
@@ -36,7 +36,7 @@
             </li>
 
             <li class="w3-hide-small w3-dropdown-hover">
-                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="Musica">
+                <a href="recitales" class="w3-hover-none w3-padding-large" title="Musica">
                     <i class="material-icons">photo_library</i>
                     Recitales
                 </a>
@@ -53,7 +53,7 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
-                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="Mas">
+                <a href="mas" class="w3-hover-none w3-padding-large" title="Mas">
                     <i class="material-icons">add_shopping_cart</i>
                     Mas
                 </a>
