--- a/views/recitales.erb
+++ b/views/recitales.erb
@@ -5,6 +5,10 @@
     <title>Buena Cosecha, Ska Reggae | Recitales</title>
   </head>
   <body>
+    <ul>
+      <li>Pasados <a href="pasados"></a></li>
+      <li>Próximos <a href="proximos"></a></li>
+    </ul>
 
   </body>
 </html>
