--- a/views/recitales.erb
+++ b/views/recitales.erb
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Buena Cosecha, Ska Reggae | Recitales</title>
-  </head>
-  <body>
-    <ul>
-      <li>Pasados <a href="pasados"></a></li>
-      <li>Próximos <a href="proximos"></a></li>
-    </ul>
+    <head>
+        <meta charset="utf-8">
+        <title>Buena Cosecha, Ska Reggae | Recitales</title>
+    </head>
+    <body>
 
-  </body>
+        <br>
+        <br>
+        <br>
+
+        <ul>
+            <li>Pasados
+                <a href="pasados"></a>
+            </li>
+            <li>Próximos
+                <a href="proximos"></a>
+            </li>
+        </ul>
+
+    </body>
 </html>
