--- a/views/audios.erb
+++ b/views/audios.erb
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Buena Cosecha, Ska Reggae | Audios</title>
-  </head>
-  <body>
+    <head>
+        <meta charset="utf-8">
+        <title>Buena Cosecha, Ska Reggae | Audios</title>
+    </head>
 
-  </body>
+    <body>
+
+        <br>
+        <br>
+        <br>
+
+        <h1>En construcción</h1>
+
+    </body>
 </html>
