--- a/views/mas.erb
+++ b/views/mas.erb
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <ul>
-      <li>Comprar entradas <a href="entradas"></a></li>
-      <li>Comprar discos, remeras <a href="mas"></a></li>
-    </ul>
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+    </head>
 
-  </body>
+    <body>
+
+        <br>
+        <br>
+        <br>
+
+        <ul>
+            <li>Comprar entradas
+                <a href="entradas"></a>
+            </li>
+            <li>Comprar discos, remeras
+                <a href="mas"></a>
+            </li>
+        </ul>
+
+    </body>
 </html>
