--- a/views/musica.erb
+++ b/views/musica.erb
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Buena Cosecha, Ska Reggae | Música </title>
-  </head>
-  <body>
-    <br>
-    <br>
-    <br>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>Buena Cosecha, Ska Reggae | Música
+        </title>
+    </head>
+
+    <body>
+
+      <br>
+      <br>
+      <br>
+
+      <h1> En construcción</h1>
+
+    </body>
 </html>
