--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Buena Cosecha, Ska Reggae | Próximos recitales</title>
-  </head>
-  <body>
+    <head>
+        <meta charset="utf-8">
+        <title>Buena Cosecha, Ska Reggae | Próximos recitales</title>
+    </head>
+    <body>
 
-  </body>
+        <br>
+        <br>
+        <br>
+
+        <a href="entradas"></a>
+    </body>
 </html>
