--- a/views/videos.erb
+++ b/views/videos.erb
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Buena Cosecha, Ska Reggae | Videos </title>
-  </head>
-  <body>
-    <br>
-    <br>
-    <br>
+    <head>
+        <meta charset="utf-8">
+        <title>Buena Cosecha, Ska Reggae | Videos
+        </title>
+    </head>
+    <body>
 
-    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fperdida.en.tu.mirada%2Fvideos%2F10209921294446495%2F&width=500" width="1000" height="1000" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        <br>
+        <br>
+        <br>
 
+        <iframe
+            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fperdida.en.tu.mirada%2Fvideos%2F10209921294446495%2F&width=500"
+            width="1000"
+            height="1000"
+            style="border:none;overflow:hidden"
+            scrolling="no"
+            frameborder="0"
+            allowTransparency="true"></iframe>
 
-  </body>
+    </body>
 </html>
