fecha salon en proximos.erb

--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -10,6 +10,6 @@
         <br>
         <br>
 
-        <a href="entradas"></a>
+<img src="/imagenes/galeria/fechas/flyersalon.jpg" alt="salon" />
     </body>
 </html>
