fecha salon en proximos.erb tamaño

--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -10,6 +10,6 @@
         <br>
         <br>
 
-<img src="/imagenes/galeria/fechas/flyersalon.jpg" alt="salon" />
+<img src="/imagenes/galeria/fechas/flyersalon.jpg" alt="salon" width="1400px" height="900px" />
     </body>
 </html>
