shows por recitales

--- a/views/shows.erb
+++ b/views/shows.erb
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Buena Cosecha, Ska Reggae | Recitales</title>
+        <title>Buena Cosecha, Ska Reggae | Shows</title>
     </head>
     <body>
 
