--- a/views/layout.erb
+++ b/views/layout.erb
@@ -38,7 +38,7 @@
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="recitales" class="w3-hover-none w3-padding-large" title="Musica">
                     <i class="material-icons">photo_library</i>
-                    Recitales
+                    Shows
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align">
                     <a href="proximos">Próximos</a>
