--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -11,10 +11,10 @@
         <br>
         <br>
         <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
-            <h3>Loca Bohemia | 20 de Agosto del 2016</h3>
-            <p>Show debut de Buena Cosecha !!</p>
+            <a href="locabohemia"> <h3>Loca Bohemia | 20 de Agosto del 2016</h3>
+            <p>Show debut de Buena Cosecha !!</p></a>
         </div>
 
-        
+
     </body>
 </html>
