links pasados.erb

--- a/views/shows.erb
+++ b/views/shows.erb
@@ -11,11 +11,11 @@
         <br>
 
         <ul>
-            <li>Pasados
-                <a href="pasados"></a>
+            <a href="pasados"><li>Pasados
+                </a>
             </li>
-            <li>Próximos
-                <a href="proximos"></a>
+            <a href="proximos"<li>Próximos
+                ></a>
             </li>
         </ul>
 
