--- a/views/shows.erb
+++ b/views/shows.erb
@@ -11,13 +11,16 @@
         <br>
 
         <ul>
-            <a href="pasados"><li>Pasados
-                </a>
-            </li>
-            <a href="proximos"<li>Próximos
-                ></a>
-            </li>
-        </ul>
+            <a href="pasados">
+                <li>Pasados
 
+                </li>
+            </a>
+            <a href="proximos">
+                <li>
+                    Próximos
+                </li>
+            </a>
+        </ul>
     </body>
 </html>
