--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -14,8 +14,9 @@
             <a href="locabohemia"> <h3>Loca Bohemia | 20 de Agosto del 2016</h3>
             <p>Show debut de Buena Cosecha !!</p></a>
         </div>
+        <br>
 
-        <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
+        <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
             <a href="salon"> <h3>Salon Pueyrredon | 2 de Septiembre del 2016</h3>
             <p>Segundo show de Buena Cosecha !!</p></a>
         </div>
