--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -2,6 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <style type="text/css">
+            .quitar {
+                text-decoration: none;
+            }
+        </style>
         <title>Buena Cosecha, Ska Reggae | Próximos recitales</title>
     </head>
     <br>
@@ -9,8 +14,12 @@
     <br>
 
     <body>
-<a href="https://www.facebook.com/events/1025566494228984/" target="_blank"> <h3> Sabado 3 de Septiembre en el Salón Pueyrredon (Av. Sta Fe 4560 CABA), 23 hs, $80</h3> </a>
-<h3> Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</h3>
+        <a href="https://www.facebook.com/events/1025566494228984/" target="_blank" class="quitar">
+            <h3>
+                Sabado 3 de Septiembre en el Salón Pueyrredon (Av. Sta Fe 4560 CABA), 23 hs, $80</h3>
+        </a>
+        <h3>
+            Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</h3>
 
     </body>
 </html>
