--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -35,29 +35,29 @@
                                 <b>Loca Bohemia, CABA</b>
                             </p>
                             <p class="w3-opacity">Sabado 20 de Agosto del 2016</p>
-                            <p>Show debut de Buena Cosecha.</p>
+                            <p>Show debut de Buena Cosecha !!</p>
                             <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Comprar entradas</button>
                         </div>
                     </div>
                     <div class="w3-third w3-margin-bottom">
-                        <img src="/imagenes/galeria/fechas/longchamps.jpg" alt="longchamps" style="width:100%" class="w3-hover-opacity">
+                        <img src="/imagenes/galeria/fechas/salonpueyrredon.jpg" alt="salon" style="width:100%" class="w3-hover-opacity">
                         <div class="w3-container w3-white">
                             <p>
-                                <b>Longchamps</b>
+                                <b>Salon Pueyrredon, CABA</b>
                             </p>
-                            <p class="w3-opacity">Viernres 21 de octubre del 2016</p>
-                            <p>Primera fecha fuera de capital!</p>
+                            <p class="w3-opacity">Sabado 3 de septiembre del 2016</p>
+                            <p>Segundo show de Buena Cosecha !!</p>
                             <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Comprar entradas</button>
                         </div>
                     </div>
                     <div class="w3-third w3-margin-bottom">
-                        <img src="/imagenes/galeria/fechas/lanuslafabrica.jpg" alt="lanus" style="width:100%" class="w3-hover-opacity">
+                        <img src="/imagenes/galeria/fechas/fiestadelaflor.jpg" alt="fiestadelaflor" style="width:100%" class="w3-hover-opacity">
                         <div class="w3-container w3-white">
                             <p>
-                                <b>La Fábrica, Lanús</b>
+                                <b>Fiesta de la Flor, CABA</b>
                             </p>
-                            <p class="w3-opacity">Viernes de noviembre del 2016</p>
-                            <p>Siguiendo la gira por zona sur!</p>
+                            <p class="w3-opacity">Viernes 21 de octubre del 2016</p>
+                            <p>Primera fiesta super fiesta !!</p>
                             <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Comprar entradas</button>
                         </div>
                     </div>
