--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -20,10 +20,10 @@
                         <span class="w3-tag w3-red w3-margin-left">Finalizado</span>
                     </li>
                     <li class="w3-padding">Septiembre
-                        <span class="w3-tag w3-red w3-margin-left">Sin shows</span>
+                        <span class="w3-tag w3-red w3-margin-left">Sabado 3 de Septiembre en el Salón Pueyrredon</span>
                     </li>
                     <li class="w3-padding">Octubre
-                        <span class="w3-badge w3-right w3-margin-right">Aún no en venta</span>
+                        <span class="w3-badge w3-right w3-margin-right">Viernes 21 de Octubre en la Fiesta de la Flor</span>
                     </li>
                 </ul>
 
