--- a/views/mas.erb
+++ b/views/mas.erb
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Buena Cosecha, Ska Reggae | Más opciones !</title>
     </head>
 
     <body>
@@ -12,11 +12,13 @@
         <br>
 
         <ul>
-            <li>Comprar entradas
-                <a href="entradas"></a>
+            <a href="entradas">
+                <li>Comprar entradas
+                </a>
             </li>
-            <li>Comprar discos, remeras
-                <a href="mas"></a>
+            <a href="mas">
+                <li>Comprar discos, remeras
+                </a>
             </li>
         </ul>
 
