--- a/views/mas.erb
+++ b/views/mas.erb
@@ -2,6 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <style type="text/css">
+            .quitar {
+                text-decoration: none;
+            }
+        </style>
         <title>Buena Cosecha, Ska Reggae | Más opciones !</title>
     </head>
 
@@ -12,11 +17,11 @@
         <br>
 
         <ul>
-            <a href="entradas">
+            <a href="entradas" class="quitar">
                 <li>Comprar entradas
                 </a>
             </li>
-            <a href="mas">
+            <a href="mas" class="quitar">
                 <li>Comprar discos, remeras
                 </a>
             </li>
