--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -6,6 +6,7 @@
             .quitar {
                 text-decoration: none;
             }
+
         </style>
         <title>Buena Cosecha, Ska Reggae | Próximos recitales</title>
     </head>
@@ -14,12 +15,18 @@
     <br>
 
     <body>
-        <a href="https://www.facebook.com/events/1025566494228984/" target="_blank" class="quitar">
+        <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
+            <a href="https://www.facebook.com/events/1025566494228984/" target="_blank" class="quitar">
+                <h3>
+                    Sabado 3 de Septiembre en el Salón Pueyrredon (Av. Sta Fe 4560 CABA), 23 hs, $80</h3>
+            </a>
+        </div>
+        <br>
+        <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
             <h3>
-                Sabado 3 de Septiembre en el Salón Pueyrredon (Av. Sta Fe 4560 CABA), 23 hs, $80</h3>
-        </a>
-        <h3>
-            Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</h3>
+                Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</h3>
+        </div>
+        <br>
 
     </body>
 </html>
