--- a/views/shows.erb
+++ b/views/shows.erb
@@ -11,16 +11,24 @@
         <br>
 
         <ul>
-            <a href="pasados">
-                <li>Pasados
+            <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
 
-                </li>
-            </a>
-            <a href="proximos">
-                <li>
-                    Próximos
-                </li>
-            </a>
+                <a href="pasados">
+                    <li>Pasados
+
+                    </li>
+                </a>
+            </div>
+            <br>
+            <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
+
+                <a href="proximos">
+                    <li>
+                        Próximos
+                    </li>
+                </a>
+            </div>
+            <br>
         </ul>
     </body>
 </html>
