--- a/views/mas.erb
+++ b/views/mas.erb
@@ -6,6 +6,7 @@
             .quitar {
                 text-decoration: none;
             }
+
         </style>
         <title>Buena Cosecha, Ska Reggae | Más opciones !</title>
     </head>
@@ -15,17 +16,22 @@
         <br>
         <br>
         <br>
+        <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
 
-        <ul>
             <a href="entradas" class="quitar">
-                <li>Comprar entradas
-                </a>
-            </li>
+                <h3>Comprar entradas</h3>
+            </a>
+        </div>
+
+        <br>
+        <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
+
             <a href="mas" class="quitar">
-                <li>Comprar discos, remeras
-                </a>
-            </li>
-        </ul>
+                <h3>Comprar discos, remeras</h3>
+            </a>
+        </div>
+
+        <br>
 
     </body>
 </html>
