--- a/views/shows.erb
+++ b/views/shows.erb
@@ -2,6 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <style type="text/css">
+            .quitar {
+                text-decoration: none;
+            }
+        </style>
         <title>Buena Cosecha, Ska Reggae | Shows</title>
     </head>
     <body>
@@ -12,7 +17,7 @@
 
         <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
 
-            <a href="pasados">
+            <a href="pasados" class="quitar">
                 <h3>Pasados</h3>
 
             </a>
@@ -20,7 +25,7 @@
         <br>
         <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
 
-            <a href="proximos">
+            <a href="proximos" class="quitar">
                 <h3>Próximos</h3>
 
             </a>
