--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -2,6 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <style type="text/css">
+            .quitar {
+                text-decoration: none;
+            }
+
+        </style>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <title>Buena Cosecha, Ska Reggae | Recitales pasados</title>
@@ -11,13 +17,13 @@
         <br>
         <br>
         <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
-            <a href="locabohemia"> <h3>Loca Bohemia | 20 de Agosto del 2016</h3>
+            <a href="locabohemia" class="quitar"> <h3>Loca Bohemia | 20 de Agosto del 2016</h3>
             <p>Show debut de Buena Cosecha !!</p></a>
         </div>
         <br>
 
         <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
-            <a href="salon"> <h3>Salon Pueyrredon | 2 de Septiembre del 2016</h3>
+            <a href="salon" class="quitar"> <h3>Salon Pueyrredon | 2 de Septiembre del 2016</h3>
             <p>Segundo show de Buena Cosecha !!</p></a>
         </div>
 
